gitops/manifests/registry-server/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-server
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-server
  template:
    metadata:
      labels:
        app: registry-server
        app.kubernetes.io/name: registry-server
    spec:
      containers:
        - name: registry
          image: registry:3.1.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: registry-storage
              mountPath: /var/lib/registry
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: registry-storage
          persistentVolumeClaim:
            claimName: registry-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: registry-server
  namespace: registry
spec:
  selector:
    app: registry-server
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
    - port: 5001
      targetPort: 5001
      protocol: TCP
      name: metrics
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.local.timmybtech.com`)
      kind: Rule
      services:
        - name: registry-server
          port: 5000
    - match: Host(`registry.local.timmybtech.com`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: registry-server
          port: 5001
  tls:
    secretName: local-timmybtech-com-tls
###### TAILSCALE ######
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: registry-server
#   namespace: registry
#   annotations: {}
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: registry-server
#       port:
#         number: 5000
#   tls:
#     - hosts:
#         - registry-server
